--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <h1>
         Odin Recipes
     </h1>
+    <img src="../odin-recipes/img/the bear.jpg" width="700" height="500">
+    <h2><em>How Can This Website Be There Without "The BEAR"</em></h2>
     <ul>
         <li><a href="recipes/lasagna.html">Lasagna</a></li>
         <li><a href="recipes/CCB.html">Chicken Cordon Bleu</a></li>
