modified thebear.jpeg and index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>
         Odin Recipes
     </h1>
-    <img src="../odin-recipes/img/the bear.jpg" width="700" height="500">
+    <img src="../img/thebear.jpeg" width="700" height="500">
     <h2><em>How Can This Website Be There Without "The BEAR"</em></h2>
     <ul>
         <li><a href="recipes/lasagna.html">Lasagna</a></li>
